Can show initial scores

--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
 <h3>Which one's cuter?</h3>
 
 <div>
-	<div id="left"><img src="/kitten/1" alt="Left cat"></div>
-	<div id="right"><img src="/kitten/2" alt="Right cat"></div>
+	<div>
+		<div id="leftScore">Score : 0</div>
+		<img src="/kitten/1" alt="Left cat">
+	</div>
+	<div>
+		<div id="rightScore">Score : 0</div>
+		<img src="/kitten/2" alt="Right cat">
+	</div>
 </div>
 </body>
 </html>
