Refactor with Template

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
 <div>
 	<div>
-		<div id="leftScore">Score : 0</div>
+		<div id="leftScore">Score : $leftScore$</div>
 		<img src="/kitten/1" alt="Left cat">
 	</div>
 	<div>
-		<div id="rightScore">Score : 0</div>
+		<div id="rightScore">Score : $rightScore$</div>
 		<img src="/kitten/2" alt="Right cat">
 	</div>
 </div>
