Test through link

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 <div>
 	<div>
 		<div id="leftScore">Score : $leftScore$</div>
-		<img src="/kitten/1" alt="Left cat">
+		<a href="/vote/1"><img src="/kitten/1" alt="Left cat"></a>
 	</div>
 	<div>
 		<div id="rightScore">Score : $rightScore$</div>
-		<img src="/kitten/2" alt="Right cat">
+		<a href="/vote/2"><img src="/kitten/2" alt="Right cat"></a>
 	</div>
 </div>
 </body>
